Started using rapidxml for xml parsing. Some fixes with missing return values.

--- a/Engine/Makefile
+++ b/Engine/Makefile
@@ -5,13 +5,11 @@ LDFLAGS=-g -shared
 LDLIBS=-Llib -lGL -lSDL -lxml2 -lboost_system -lboost_filesystem
 
 #Compiler
-CXXFLAGS=-Iinclude $(shell xml2-config --cflags) -g -fpic -std=c++11
+CXXFLAGS=-Iinclude $(shell xml2-config --cflags) -g -fpic -std=c++11 -Wall -Werror
 CXX=g++
 #CXX=clang
 
 OBJ=$(patsubst src/%.cpp,obj/%.o,$(shell ls src/*.cpp))
-
-#LIBXML=lib/libxml2.so
 
 #THIRDPARTY=$(LIBXML)
 
@@ -21,12 +19,7 @@ clean:
 	rm -r bin obj
 
 purge: clean
-	rm -r lib src/third-party/libxml2-2.7.2
-
-$(LIBXML):
-	@mkdir lib
-	rm -rf src/third-party/libxml2-2.7.2 && cd src/third-party/ && tar -xzf libxml2-2.7.2.tar.gz && cd libxml2-2.7.2 && ./configure && $(MAKE)
-	cp src/third-party/libxml2-2.7.2/.libs/libxml2.so lib
+	rm -r lib 
 
 obj/%.o:src/%.cpp 
 	@mkdir -p obj
